// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: <SEO /> should render correctly as post data 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
>
  <html
    itemType="http://schema.org/Article"
    lang="sarcasm"
    prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#"
  />
  <meta
    content="Turd Ferguson"
    name="author"
  />
  <meta
    content="Yabba dabba do"
    name="description"
  />
  <meta
    content="snl, that's a funny name, something borrowed, something earned"
    name="keywords"
  />
  <meta
    content="A funny article from a funny guy"
    itemProp="name"
  />
  <meta
    content="Yabba dabba do"
    itemProp="description"
  />
  <meta
    content="02-11-99"
    itemProp="datePublished"
  />
  <meta
    content="02-11-99"
    itemProp="dateModified"
  />
  <meta
    content={567}
    itemProp="wordCount"
  />
  <meta
    content="snl, that's a funny name, something borrowed, something earned"
    itemProp="keywords"
  />
  <meta
    content={null}
    itemProp="image"
  />
  <meta
    content="A funny article from a funny guy"
    property="og:title"
  />
  <meta
    content="Yabba dabba do"
    property="og:description"
  />
  <meta
    content={null}
    property="og:image"
  />
  <meta
    content="Logo for codybrunner.rocks"
    property="og:image:alt"
  />
  <meta
    content="image/jpeg"
    property="og:image:type"
  />
  <meta
    content="300"
    property="og:image:height"
  />
  <meta
    content="400"
    property="og:image:width"
  />
  <meta
    content="turdspace.com/turdsspace/"
    property="og:url"
  />
  <meta
    content="That's a Funny Name"
    property="og:site_name"
  />
  <meta
    content="sarcasm"
    property="og:locale"
  />
  <meta
    content="article"
    property="og:type"
  />
  <meta
    content="summary"
    name="twitter:card"
  />
  <meta
    content="@theRealTurd"
    name="twitter:creator"
  />
  <meta
    content="A funny article from a funny guy"
    name="twitter:title"
  />
  <meta
    content="Yabba dabba do"
    name="twitter:description"
  />
  <meta
    content={null}
    name="twitter:image"
  />
  <meta
    content="Logo for codybrunner.rocks"
    name="twitter:image:alt"
  />
  <meta
    content="turdspace.com/turdsspace/"
    name="twitter:url"
  />
  <title
    itemProp="name"
    lang="sarcasm"
  >
    Cody's Blog - A funny article from a funny guy
  </title>
</HelmetWrapper>
`;

exports[`Component: <SEO /> should render correctly as site data 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
>
  <html
    itemType="http://schema.org/WebSite"
    lang="sarcasm"
    prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#"
  />
  <meta
    content="Turd Ferguson"
    name="author"
  />
  <meta
    content="Turd's Space"
    name="description"
  />
  <meta
    content="snl, that's a funny name"
    name="keywords"
  />
  <meta
    content="That's a Funny Name"
    itemProp="name"
  />
  <meta
    content="Turd's Space"
    itemProp="description"
  />
  <meta
    content=""
    itemProp="datePublished"
  />
  <meta
    content=""
    itemProp="dateModified"
  />
  <meta
    content=""
    itemProp="wordCount"
  />
  <meta
    content="snl, that's a funny name"
    itemProp="keywords"
  />
  <meta
    content={null}
    itemProp="image"
  />
  <meta
    content="That's a Funny Name"
    property="og:title"
  />
  <meta
    content="Turd's Space"
    property="og:description"
  />
  <meta
    content={null}
    property="og:image"
  />
  <meta
    content="Logo for codybrunner.rocks"
    property="og:image:alt"
  />
  <meta
    content="image/jpeg"
    property="og:image:type"
  />
  <meta
    content="300"
    property="og:image:height"
  />
  <meta
    content="400"
    property="og:image:width"
  />
  <meta
    content="turdspace.com"
    property="og:url"
  />
  <meta
    content="That's a Funny Name"
    property="og:site_name"
  />
  <meta
    content="sarcasm"
    property="og:locale"
  />
  <meta
    content="website"
    property="og:type"
  />
  <meta
    content="summary"
    name="twitter:card"
  />
  <meta
    content="@theRealTurd"
    name="twitter:creator"
  />
  <meta
    content="That's a Funny Name"
    name="twitter:title"
  />
  <meta
    content="Turd's Space"
    name="twitter:description"
  />
  <meta
    content={null}
    name="twitter:image"
  />
  <meta
    content="Logo for codybrunner.rocks"
    name="twitter:image:alt"
  />
  <meta
    content="turdspace.com"
    name="twitter:url"
  />
  <title
    itemProp="name"
    lang="sarcasm"
  >
    That's a Funny Name
  </title>
</HelmetWrapper>
`;
